crates/syntax/tests/snapshots/parser__parser_attribute assigment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..31,
        statements: StatementList {
            span: 0..31,
            statements: [
                Assignment(
                    Assignment {
                        span: 0..30,
                        doc: None,
                        attributes: [
                            Attribute {
                                span: 2..19,
                                command: Assignment(
                                    Assignment {
                                        span: 2..19,
                                        doc: None,
                                        attributes: [],
                                        visibility: None,
                                        qualifier: None,
                                        name: Identifier {
                                            span: 2..7,
                                            name: "color",
                                        },
                                        ty: None,
                                        value: Literal(
                                            String(
                                                StringLiteral {
                                                    span: 18..19,
                                                    content: "#FF00FF",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ],
                        visibility: None,
                        qualifier: None,
                        name: Identifier {
                            span: 25..26,
                            name: "a",
                        },
                        ty: None,
                        value: Literal(
                            Integer(
                                IntegerLiteral {
                                    span: 29..30,
                                    value: 1,
                                },
                            ),
                        ),
                    },
                ),
            ],
            tail: None,
        },
    },
)
