crates/syntax/tests/snapshots/parser__parser_attribute expression.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..27,
        statements: StatementList {
            span: 0..27,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                (
                    Expression(
                        ExpressionStatement {
                            span: 0..26,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            attributes: [
                                Attribute {
                                    span: 0..25,
                                    is_inner: false,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    commands: [
                                        Assignment(
                                            LocalAssignment {
                                                span: 2..19,
                                                extras: ItemExtras {
                                                    leading: [],
                                                    trailing: [],
                                                },
                                                attributes: [],
                                                name: Identifier {
                                                    span: 2..7,
                                                    name: "color",
                                                },
                                                ty: None,
                                                value: Literal(
                                                    Literal {
                                                        span: 10..19,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [],
                                                        },
                                                        literal: String(
                                                            StringLiteral {
                                                                span: 10..19,
                                                                content: "#FF00FF",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ],
                            expression: Literal(
                                Literal {
                                    span: 25..26,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    literal: Integer(
                                        IntegerLiteral {
                                            span: 25..26,
                                            value: 1,
                                            raw: "1",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    [],
                ),
            ],
            tail: None,
        },
    },
)
