crates/syntax/tests/snapshots/parser__parser_attribute ident.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..20,
        statements: StatementList {
            span: 0..20,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                (
                    LocalAssignment(
                        LocalAssignment {
                            span: 0..19,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            attributes: [
                                Attribute {
                                    span: 0..14,
                                    is_inner: false,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    commands: [
                                        Ident(
                                            Identifier {
                                                span: 2..8,
                                                name: "export",
                                            },
                                        ),
                                    ],
                                },
                            ],
                            name: Identifier {
                                span: 14..15,
                                name: "a",
                            },
                            ty: None,
                            value: Literal(
                                Literal {
                                    span: 18..19,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    literal: Integer(
                                        IntegerLiteral {
                                            span: 18..19,
                                            value: 1,
                                            raw: "1",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    None,
                ),
            ],
            tail: None,
        },
    },
)
